# transmission-exporter

./: README.md  cabal.project  flake.nix  transmission-exporter.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/Data/Prometheus/Exporter/: Transmission.hs
