cabal-version:       3.0
name:                transmission-exporter
version:             0.1.1.0
author:              Gautier DI FOLCO
maintainer:          gautier.difolco@gmail.com
category:            Data
build-type:          Simple
license:             ISC
license-file:        LICENSE
synopsis:            Transmission Prometheus Exporter
description:         Transmission Prometheus Exporter.
Homepage:            http://github.com/blackheaven/transmission-exporter

library
  hs-source-dirs: src
  exposed-modules:
      Data.Prometheus.Exporter.Transmission
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , aeson
    , aeson-qq
    , bytestring
    , containers
    , envparse
    , lens
    , text
    , wreq
  default-language: Haskell2010

executable transmission-exporter
  -- type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: app
  default-extensions:
      DataKinds
      DefaultSignatures
      DeriveAnyClass
      DeriveGeneric
      DerivingStrategies
      DerivingVia
      DuplicateRecordFields
      FlexibleContexts
      GADTs
      GeneralizedNewtypeDeriving
      KindSignatures
      LambdaCase
      OverloadedRecordDot
      OverloadedStrings
      RankNTypes
      RecordWildCards
      ScopedTypeVariables
      TypeApplications
      TypeFamilies
      TypeOperators
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
  build-depends:
      base
    , transmission-exporter
    , bytestring
    , containers
    , envparse
    , http-types
    , lens
    , prometheus-client
    , text
    , wai
    , warp
  default-language: Haskell2010
